--- a/css/style1.css
+++ b/css/style1.css
@@ -44,18 +44,46 @@ h1 {
     cursor: pointer;
     margin: 0.5em;
     padding: 0.6em;
-    
+    text-decoration: none;
+    border: 1px solid #ccc;
+    width: 160px;
+    background-color: #e5e5e5;
+    color: #000;
+
 }
 
 .Botão2 {
     cursor: pointer;
     margin: 0.5em;
     padding: 0.6em;
+    text-decoration: none;
+    border: 1px solid #ccc;
+    width: 160px;
+    background-color: #e5e5e5;
+    color: #000;
+
 }
 
 .Botão3 {
     cursor: pointer;
     margin: 0.5em;
     padding: 0.6em;
+    text-decoration: none;
+    border: 1px solid #ccc;
+    width: 160px;
+    background-color: #e5e5e5;
+    color: #000;
 
+}
+
+.Botão1:hover {
+    background-color: rgb(197, 193, 193);
+}
+
+.Botão2:hover {
+    background-color: rgb(197, 193, 193);
+}
+
+.Botão3:hover {
+    background-color: rgb(197, 193, 193);
 }
