--- a/css/style1.css
+++ b/css/style1.css
@@ -7,11 +7,17 @@ body {
     align-items: center;
     padding: none;
     margin: 0;
+    background: linear-gradient(
+        90deg,
+        rgb(243, 82, 8) 0%,
+        #fc0 100%
+    );
   }
 
 h1 {
     margin-top: 0px;
     border: none;
+    color: rgb(255, 72, 0);
 }
 
 .container {
