--- a/css/style2.css
+++ b/css/style2.css
@@ -7,12 +7,18 @@ body {
     align-items: center;
     padding: none;
     margin: 0;
+    background: linear-gradient(
+        90deg,
+        rgb(243, 82, 8) 0%,
+        #fc0 100%
+    );
   }
 
 h1 {
     margin-top: 0px;
     border: none;
     margin-top: 20px;
+    color: rgb(255, 72, 0);
 }
 
 .container2 {
