--- a/css/style3.css
+++ b/css/style3.css
@@ -15,7 +15,7 @@ body {
   }
 
 h1 {
-    margin-top: 0px;
+
     border: none;
     margin-top: 20px;
     color: rgb(255, 72, 0);
@@ -29,6 +29,7 @@ h1 {
     border-radius: 10px;
     text-align: center;
     align-items: center;
+    flex-direction: column;
 }
 
 .cell {
@@ -43,13 +44,6 @@ h1 {
 
 }
 
-.btn-container3 {
-    display: center;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-}
-
 .btn-voltar2 {
     cursor: pointer;
     text-decoration: none;
@@ -61,4 +55,19 @@ h1 {
 
 .btn-voltar2:hover {
     background-color: rgb(197, 193, 193);
-}   
+}
+
+.btn-reiniciar {
+    cursor: pointer;
+    text-decoration: none;
+    border: 1px solid #ccc;
+    background-color: #e5e5e5;
+    color: #000;
+    padding: 5px;
+    margin-top: 15px;
+    font-size: 15px;
+}
+
+.btn-reiniciar:hover {
+    background-color: rgb(197, 193, 193);
+}
