--- a/css/style2.css
+++ b/css/style2.css
@@ -7,11 +7,7 @@ body {
     align-items: center;
     padding: none;
     margin: 0;
-    background: linear-gradient(
-        90deg,
-        rgb(243, 82, 8) 0%,
-        #fc0 100%
-    );
+    background: linear-gradient(90deg, rgb(243, 82, 8) 0%, #fc0 100%);
   }
 
 h1 {
@@ -28,36 +24,50 @@ h1 {
     padding: 20px;
     border-radius: 10px;
     text-align: center;
-        display: center;
+    display: center;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
 }
 
+.btn-container1 {
+    display: flex;
+    justify-content:space-evenly;
+    align-items: center;
+    flex-direction:row;
+}
+
 .Botão4 {
-    cursor: pointer;
-    margin: 0.5em;
-    padding: 0.6em;
     text-decoration: none;
+    padding: 20px;
+    padding-top: 50px;
+    height: 80px;
+    width: 80px;
+    font-size: 40px;
+    cursor: pointer;
+    background-color: #fffafa;
     border: 1px solid #ccc;
-    width: 300px;
-    height: 300px;
-    background-color: #e5e5e5;
     color: #000;
 }
 
 .Botão5 {
-    cursor: pointer;
-    margin: 0.5em;
-    padding: 0.6em;
     text-decoration: none;
+    padding: 20px;
+    padding-top: 50px;
+    height: 80px;
+    width: 80px;
+    font-size: 40px;
+    cursor: pointer;
+    background-color: #fffafa;
     border: 1px solid #ccc;
-    width: 300px;
-    height: 300px;
-    background-color: #e5e5e5;
     color: #000;
 }
 
+.btn-container2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .btn-voltar {
     cursor: pointer;
