--- a/css/style3.css
+++ b/css/style3.css
@@ -57,17 +57,40 @@ h1 {
     background-color: rgb(197, 193, 193);
 }
 
-.reiniciar {
+.mensagemvitoria {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(255, 138, 5);
+    flex-direction: column;
+}
+
+.btn-reiniciar {
+    font-size: 2.5rem;
+    background-color: #fc0;
+    padding: 10px 15px;
     cursor: pointer;
-    text-decoration: none;
-    border: 1px solid #ccc;
-    background-color: #e5e5e5;
-    color: #000;
-    padding: 5px;
-    margin-top: 15px;
-    font-size: 15px;
+    border-radius: 5px;
+    border: none;
+    margin-top: 16px;
+    color: white;
 }
 
 .btn-reiniciar:hover {
-    background-color: rgb(197, 193, 193);
+    background-color: white;
+    color:#fc0
+} 
+
+.textovitoria {
+    color: white;
+    font-size: 5rem;
+}
+
+.MostrarMensagem {
+    display: flex;
 }
