--- a/css/style3.css
+++ b/css/style3.css
@@ -15,15 +15,14 @@ body {
   }
 
 h1 {
-
     border: none;
     margin-top: 20px;
     color: rgb(255, 72, 0);
 }
 
-.container3 {
+.container {
     width: 300px;
-    height: 300px;
+    height: 400px;
     background-color: #fc0;
     padding: 20px;
     border-radius: 10px;
@@ -40,20 +39,59 @@ h1 {
     padding: 11px;
     margin: 5px;
     cursor: pointer;
-    margin-bottom: 10px;
     color: black
 }
 
-.btn-voltar2 {
-    cursor: pointer;
-    text-decoration: none;
-    border: 1px solid #ccc;
-    background-color: #e5e5e5;
-    color: #000;
-    padding: 5px;
+.btn-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 30px;
 }
 
-.btn-voltar2:hover {
+.Botão1 {
+    cursor: pointer;
+    margin: 0.5em;
+    padding: 0.6em;
+    text-decoration: none;
+    border: 1px solid #ccc;
+    width: 160px;
+    background-color: #e5e5e5;
+    color: #000;
+}
+
+.Botão2 {
+    cursor: pointer;
+    margin: 0.5em;
+    padding: 0.6em;
+    text-decoration: none;
+    border: 1px solid #ccc;
+    width: 160px;
+    background-color: #e5e5e5;
+    color: #000;
+}
+
+.Botão3 {
+    cursor: pointer;
+    margin: 0.5em;
+    padding: 0.6em;
+    text-decoration: none;
+    border: 1px solid #ccc;
+    width: 160px;
+    background-color: #e5e5e5;
+    color: #000;
+}
+
+.Botão1:hover {
+    background-color: rgb(197, 193, 193);
+}
+
+.Botão2:hover {
+    background-color: rgb(197, 193, 193);
+}
+
+.Botão3:hover {
     background-color: rgb(197, 193, 193);
 }
 
@@ -93,4 +131,4 @@ h1 {
 
 .MostrarMensagem {
     display: flex;
-}
+} 
