--- a/css/style3.css
+++ b/css/style3.css
@@ -50,6 +50,17 @@ h1 {
     margin-top: 30px;
 }
 
+.Botão1 {
+    cursor: pointer;
+    margin: 0.5em;
+    padding: 0.6em;
+    text-decoration: none;
+    border: 1px solid #ccc;
+    width: 160px;
+    background-color: #e5e5e5;
+    color: #000;
+}
+
 .Botão2 {
     cursor: pointer;
     margin: 0.5em;
@@ -70,6 +81,10 @@ h1 {
     width: 160px;
     background-color: #e5e5e5;
     color: #000;
+}
+
+.Botão1:hover {
+    background-color: rgb(197, 193, 193);
 }
 
 .Botão2:hover {
