--- a/css/style.css
+++ b/css/style.css
@@ -1,46 +1,38 @@
-body {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: none;
+* {
     margin: 0;
-    background: linear-gradient(
-        90deg,
-        rgb(243, 82, 8) 0%,
-        #fc0 100%
-    );
+    padding: 0;
+    box-sizing: border-box;
+}
+body {
+    background: linear-gradient(90deg,rgb(243, 82, 8) 0%,#fc0 100%);
 }
 
 h1 {
-    border: none;
-    margin-top: 20px;
+    text-align: center;
+    font-size: 50px;
     color: rgb(255, 72, 0);
+    margin: 64px 0 64px 0;
 }
 
 .container {
-    width: 300px;
-    height: 400px;
-    background-color: #fc0;
-    padding: 20px;
-    border-radius: 10px;
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(3, auto);
     text-align: center;
-    align-items: center;
-    flex-direction: column;
-    margin-bottom: none;
+    
 }
 
 .cell {
-    width: 15px;
-    height: 15px;
+    width: 100px;
+    height: 100px;
     background: #eee;
-    display: inline-block;
     padding: 15px;
     margin: 5px;
     cursor: pointer;
-    color: black 
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .btn-container {
