--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 h1 {
     text-align: center;
     font-size: 50px;
-    color: rgb(255, 72, 0);
+    color: #ff4800;
     margin: 64px 0 25px 0;
 }
 
