--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,16 @@
+/* Define valores iniciais para todos os elementos */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
+/* Define o estilo do corpo da página */
 body {
     background: linear-gradient(90deg,rgb(243, 82, 8) 0%,#fc0 100%);
 }
 
+/* Define o estilo do título principal */
 h1 {
     text-align: center;
     font-size: 50px;
@@ -14,6 +18,7 @@ h1 {
     margin: 64px 0 25px 0;
 }
 
+/* Define o estilo do contêiner dos quadrados */
 .container {
     display: grid;
     justify-content: center;
@@ -21,6 +26,7 @@ h1 {
     text-align: center;
 }
 
+/* Define o estilo dos quadrados */
 .cell {
     width: 70px;
     height: 70px;
@@ -35,6 +41,7 @@ h1 {
     align-items: center;
 }
 
+/* Define o estilo do contêiner dos botões */
 .btn-container {
     display: flex;
     align-items: center;
@@ -43,6 +50,7 @@ h1 {
     margin-top: 10px;
 }
 
+/* Define o estilo dos botões */
 .Botão1 {
     cursor: pointer;
     margin: 0.5em;
@@ -54,10 +62,12 @@ h1 {
     color: #000;
 }
 
+/* Define o estilo do botão quando passa o mouse por cima */
 .Botão1:hover {
     background-color: rgb(197, 193, 193);
 }
 
+/* Define o estilo da mensagem de vitória */
 .mensagemvitoria {
     display: none;
     position: fixed;
@@ -71,11 +81,13 @@ h1 {
     flex-direction: column;
 }
 
+/* Define o estilo do texto da mensagem de vitória */
 .textovitoria {
     color: white;
     font-size: 5rem;
 }
 
+/* Define o estilo para mostrar a mensagem de vitória */
 .MostrarMensagem {
     display: flex;
-} 
+}
